Initial commit (under construction)

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Home | Elijah Sorensen</title>
+    <title>About | Elijah Sorensen</title>
 </head>
 
 <body>
@@ -17,9 +17,23 @@
         <li style="float: right;"><a href="about.html">About</a></li>
     </div>
     <div class="content">
-        <h1>Hi, I'm Elijah 👋</h1>
-        <h2>Student developer based in Boise, ID</h2>
-        <p>My portfolio is currently under construction 🚧</p>
+        <h2>About me 🏃‍♂️</h2>
+        <h3>Work Experience</h3>
+        <h4>Student Programmer</h4>
+        <p class="project-attributes">Boise State University Admissions</p>
+        <p class="subtext">Nov. 2020 - Current</p>
+        <div>
+            <p>Position description</p>
+        </div>
+        <h4>Computer Science Summer Camp</h4>
+        <p class="project-attributes">High School Graduate Project</p>
+        <p class="subtext">June. 2019</p>
+        <div>
+            <p>Position description</p>
+        </div>
+        <h3>Accolades</h3>
+        <h4>Mobile Applications - National Showcase Top 10 Qualifier</h4>
+        <p class="project-attributes">Business Professionals of America</p>
     </div>
 </body>
 
