--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Home | Elijah Sorensen</title>
+    <title>Skills | Elijah Sorensen</title>
 </head>
 
 <body>
@@ -17,8 +17,7 @@
         <li style="float: right;"><a href="about.html">About</a></li>
     </div>
     <div class="content">
-        <h1>Hi, I'm Elijah 👋</h1>
-        <h2>Student developer based in Boise, ID</h2>
+        <h2>These are my skills 🔨</h2>
         <p>My portfolio is currently under construction 🚧</p>
     </div>
 </body>
