updates to projects and style

--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,9 @@
         <div class="module">
             <h4>Priority Queue CPU Scheduling Simulation</h4>
             <p class="project-attributes">Java | 2021</p>
-            <p class="subtext">Project description</p>
+            <p class="subtext">Priority queue max heap for simulation of round-robin CPU Process scheduling. Randomly generates processes, adds them to the queue following the scheduling algorithm, and outputs simulation results.</p>
             <div class="links">
-                <a href="https://www.google.com">GitHub</a>
+                <a href="https://github.com/soreelij/cpu-scheduling">GitHub</a>
             </div>
         </div>
         <div class="module">
@@ -40,7 +40,6 @@
             <p class="subtext">Project description</p>
             <div class="links">
                 <a href="https://www.google.com">GitHub</a>
-                <a href="https://www.google.com">Live Version</a>
             </div>
         </div>
         <div class="module">
