update live version before career fair

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <div class="topnav">
         <li style><a style=" font-style: italic; padding: 14px 0px" href="index.html">Elijah Sorensen</a></li>
         <li style="float: right;"><a href="projects.html">Projects</a></li>
-        <li style="float: right;"><a href="skills.html">Skills</a></li>
-        <li style="float: right;"><a href="about.html">About</a></li>
+        <!-- <li style="float: right;"><a href="skills.html">Skills</a></li>
+        <li style="float: right;"><a href="about.html">About</a></li> -->
     </div>
     <div class="content">
         <h1>Hi, I'm Elijah 👋</h1>
         <h2>Student developer based in Boise, ID</h2>
-        <p>My portfolio is currently under construction 🚧</p>
+        <a href="projects.html">Learn more about my projects</a>
     </div>
 </body>
 
 <footer style="text-align: center;">
     <p>&copy; 2022 Elijah Sorensen</p>
     <div class="footernav">
-        <li style><a href="index.html">GitHub</a></li>
-        <li><a href="projects.html">Linkedin</a></li>
-        <li><a href="skills.html">Email</a></li>
+        <li style><a href="https://github.com/soreelij">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/elijahmsorensen/">Linkedin</a></li>
+        <!-- <li><a href="skills.html">Email</a></li> -->
     </div>
 </footer>
 
