--- a/projects.html
+++ b/projects.html
@@ -12,18 +12,18 @@
     <div class="topnav">
         <li style><a style=" font-style: italic; padding: 14px 0px" href="index.html">Elijah Sorensen</a></li>
         <li style="float: right;"><a href="projects.html">Projects</a></li>
-        <li style="float: right;"><a href="skills.html">Skills</a></li>
-        <li style="float: right;"><a href="about.html">About</a></li>
+        <!-- <li style="float: right;"><a href="skills.html">Skills</a></li>
+        <li style="float: right;"><a href="about.html">About</a></li> -->
     </div>
     <div class="content">
-        <h2>Some projects I've worked on 👨‍💻</h2>
+        <h2>Projects I've worked on 👨‍💻</h2>
         <h3>University</h3>
         <div class="module">
             <h4>Circuit Tracer</h4>
             <p class="project-attributes">Java | 2021</p>
-            <p class="subtext">Project description</p>
+            <p class="subtext">Implementation of a search algorithm which parses a valid input .dat file representing a circuit board layout, generating a list of the best possible (shortest) trace paths that connect two circuit components on the board.</p>
             <div class="links">
-                <a href="https://www.google.com">GitHub</a>
+                <a href="https://github.com/soreelij/circuit-tracer">GitHub</a>
             </div>
         </div>
         <div class="module">
@@ -34,20 +34,20 @@
                 <a href="https://github.com/soreelij/cpu-scheduling">GitHub</a>
             </div>
         </div>
-        <div class="module">
+        <!-- <div class="module">
             <h4>Bioinformatics Using B-Trees</h4>
             <p class="project-attributes">Java | 2021</p>
             <p class="subtext">Project description</p>
             <div class="links">
                 <a href="https://www.google.com">GitHub</a>
             </div>
-        </div>
+        </div> -->
         <div class="module">
             <h4>myps</h4>
             <p class="project-attributes">C | 2021</p>
-            <p class="subtext">Project description</p>
+            <p class="subtext">Simplified version of the ps command found on the Unix terminal. Displays current processes on the system and their respective information. Demonstrates the create/destroy design pattern, dynamic memory allocation, and file stream proecessing.</p>
             <div class="links">
-                <a href="https://www.google.com">GitHub</a>
+                <a href="https://github.com/soreelij/myps/blob/main/README.md">GitHub</a>
             </div>
         </div>
     </div>
@@ -56,9 +56,9 @@
 <footer style="text-align: center;">
     <p>&copy; 2022 Elijah Sorensen</p>
     <div class="footernav">
-        <li style><a href="index.html">GitHub</a></li>
-        <li><a href="projects.html">Linkedin</a></li>
-        <li><a href="skills.html">Email</a></li>
+        <li style><a href="https://github.com/soreelij">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/elijahmsorensen/">Linkedin</a></li>
+        <!-- <li><a href="skills.html">Email</a></li> -->
     </div>
 </footer>
 
