--- a/projects.html
+++ b/projects.html
@@ -18,14 +18,14 @@
     <div class="content">
         <h2>Projects I've worked on 👨‍💻</h2>
         <h3>University</h3>
-        <!-- <div class="module">
+        <div class="module">
             <h4>Circuit Tracer</h4>
             <p class="project-attributes">Java | 2021</p>
             <p class="subtext">Implementation of a search algorithm which parses a valid input .dat file representing a circuit board layout, generating a list of the best possible (shortest) trace paths that connect two circuit components on the board.</p>
             <div class="links">
                 <a href="https://github.com/soreelij/circuit-tracer">GitHub</a>
             </div>
-        </div> -->
+        </div>
         <div class="module">
             <h4>Priority Queue CPU Scheduling Simulation</h4>
             <p class="project-attributes">Java | 2021</p>
