Add new projects

--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,20 @@
     </div>
     <div class="content">
         <h2>Projects I've worked on 👨‍💻</h2>
+        <h3>Personal</h3>
+        <div class="module">
+            <h4>Quiz FM</h4>
+            <p class="project-attributes">Swift | 2021-2022</p>
+            <p class="subtext">Music quiz game for iOS that utilizes the last.fm API to generate questions based around a user's streaming habits.</p>
+        </div>
+        <div class="module">
+            <h4>Taylorizer</h4>
+            <p class="project-attributes">Python/React Web | 2022</p>
+            <p class="subtext">Allows users to interact with a GPT-2 powered machine learning model trained to write Taylor Swift songs.</p>
+            <div class="links">
+                <a href="https://www.elijahsorensen.com/taylorizer/index.html">Try it</a>
+            </div>
+        </div>
         <h3>University</h3>
         <div class="module">
             <h4>Circuit Tracer</h4>
@@ -34,14 +48,14 @@
                 <a href="https://github.com/soreelij/cpu-scheduling">GitHub</a>
             </div>
         </div>
-        <!-- <div class="module">
+        <div class="module">
             <h4>Bioinformatics Using B-Trees</h4>
             <p class="project-attributes">Java | 2021</p>
-            <p class="subtext">Project description</p>
+            <p class="subtext">Parses an input GeneBank file and stores its contents within a B-Tree. Accepts a DNA sequence query and searches the B-Tree, returning its frequency occurrence within the given genome. Outputs results to a machine-readable binary file or an SQL database.</p>
             <div class="links">
-                <a href="https://www.google.com">GitHub</a>
+                <a href="https://github.com/soreelij/btree">GitHub</a>
             </div>
-        </div> -->
+        </div>
         <div class="module">
             <h4>myps</h4>
             <p class="project-attributes">C | 2021</p>
