WIP | Remove weird font sizing

--- a/in-progress/about.html
+++ b/in-progress/about.html
@@ -20,13 +20,13 @@
         <h3>Work Experience</h3>
         <h4>Student Programmer</h4>
         <p class="project-attributes">Boise State University Admissions</p>
-        <p class="subtext">Nov. 2020 - Current</p>
+        <p>Nov. 2020 - Current</p>
         <div>
             <p>Position description</p>
         </div>
         <h4>Computer Science Summer Camp</h4>
         <p class="project-attributes">High School Graduate Project</p>
-        <p class="subtext">June. 2019</p>
+        <p>June. 2019</p>
         <div>
             <p>Position description</p>
         </div>
