--- a/projects.html
+++ b/projects.html
@@ -21,12 +21,12 @@
         <div class="module">
             <h4>Quiz FM</h4>
             <p class="project-attributes">Swift | 2021-2022</p>
-            <p class="subtext">Music quiz game for iOS that utilizes the last.fm API to generate questions based around a user's streaming habits.</p>
+            <p>Music quiz game for iOS that utilizes the last.fm API to generate questions based around a user's streaming habits.</p>
         </div>
         <div class="module">
             <h4>Taylorizer</h4>
             <p class="project-attributes">Python/React Web | 2022</p>
-            <p class="subtext">Allows users to interact with a GPT-2 powered machine learning model trained to write Taylor Swift songs.</p>
+            <p>Allows users to interact with a GPT-2 powered machine learning model trained to write Taylor Swift songs.</p>
             <div class="links">
                 <a href="https://www.elijahsorensen.com/taylorizer/index.html">Try it</a>
             </div>
@@ -35,7 +35,7 @@
         <div class="module">
             <h4>Circuit Tracer</h4>
             <p class="project-attributes">Java | 2021</p>
-            <p class="subtext">Implementation of a search algorithm which parses a valid input .dat file representing a circuit board layout, generating a list of the best possible (shortest) trace paths that connect two circuit components on the board.</p>
+            <p>Implementation of a search algorithm which parses a valid input .dat file representing a circuit board layout, generating a list of the best possible (shortest) trace paths that connect two circuit components on the board.</p>
             <div class="links">
                 <a href="https://github.com/soreelij/circuit-tracer">GitHub</a>
             </div>
@@ -43,7 +43,7 @@
         <div class="module">
             <h4>Priority Queue CPU Scheduling Simulation</h4>
             <p class="project-attributes">Java | 2021</p>
-            <p class="subtext">Priority queue max heap for simulation of round-robin CPU Process scheduling. Randomly generates processes, adds them to the queue following the scheduling algorithm, and outputs simulation results.</p>
+            <p>Priority queue max heap for simulation of round-robin CPU Process scheduling. Randomly generates processes, adds them to the queue following the scheduling algorithm, and outputs simulation results.</p>
             <div class="links">
                 <a href="https://github.com/soreelij/cpu-scheduling">GitHub</a>
             </div>
@@ -51,7 +51,7 @@
         <div class="module">
             <h4>Bioinformatics Using B-Trees</h4>
             <p class="project-attributes">Java | 2021</p>
-            <p class="subtext">Parses an input GeneBank file and stores its contents within a B-Tree. Accepts a DNA sequence query and searches the B-Tree, returning its frequency occurrence within the given genome. Outputs results to a machine-readable binary file or an SQL database.</p>
+            <p>Parses an input GeneBank file and stores its contents within a B-Tree. Accepts a DNA sequence query and searches the B-Tree, returning its frequency occurrence within the given genome. Outputs results to a machine-readable binary file or an SQL database.</p>
             <div class="links">
                 <a href="https://github.com/soreelij/btree">GitHub</a>
             </div>
@@ -59,7 +59,7 @@
         <div class="module">
             <h4>myps</h4>
             <p class="project-attributes">C | 2021</p>
-            <p class="subtext">Simplified version of the ps command found on the Unix terminal. Displays current processes on the system and their respective information. Demonstrates the create/destroy design pattern, dynamic memory allocation, and file stream proecessing.</p>
+            <p>Simplified version of the ps command found on the Unix terminal. Displays current processes on the system and their respective information. Demonstrates the create/destroy design pattern, dynamic memory allocation, and file stream proecessing.</p>
             <div class="links">
                 <a href="https://github.com/soreelij/myps/blob/main/README.md">GitHub</a>
             </div>
