--- a/index.html
+++ b/index.html
@@ -4,26 +4,109 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
     <title>Home | Elijah Sorensen</title>
 </head>
 
 <body>
-    <div class="topnav">
-        <li style><a style=" font-style: italic; padding: 14px 0px" href="index.html">Elijah Sorensen</a></li>
-        <li style="float: right;"><a href="projects.html">Projects</a></li>
+    <div class="mt-3 col-md-8 offset-md-2 topnav">
+        <li><a class="hover-underline-animation" style="padding: 14px 0px" href="index.html">Elijah Sorensen</a></li>
+        <li><a class="hover-underline-animation" href="#projects">Projects</a></li>
         <!-- <li style="float: right;"><a href="skills.html">Skills</a></li>
         <li style="float: right;"><a href="about.html">About</a></li> -->
     </div>
-    <div class="content">
-        <h1>Hi, I'm Elijah 👋</h1>
-        <h2>Student developer based in Boise, ID</h2>
-        <a href="projects.html">Learn more about my projects</a>
+
+     <div class="mt-5">&nbsp;</div>
+
+    <div class="mt-5 col-md-8 offset-md-2">
+        <h1 class="title">Elijah Sorensen</h1>
+        <h2 class="subtitle mb-4" style="font-weight: 900;">Student Developer in <span style="color: #3E7CB6;">Boise, ID</span></h2>
+        <a href="#projects">Learn more about my projects</a>
     </div>
+
+    <div class="mt-5">&nbsp;</div>
+    <div class="mt-5">&nbsp;</div>
+    <div class="mt-5">&nbsp;</div>
+    <div class="mt-5">&nbsp;</div>
+    <div class="mt-5">&nbsp;</div>
+    <div class="mt-5">&nbsp;</div>
+
+    <div id="projects" class="mt-5 col-md-8 offset-md-2">
+        <div class="mt-5">&nbsp;</div>
+        <h1>PROJECTS</h1>
+        <h3>Personal</h3>
+        <div>
+            <h4>Quiz FM</h4>
+            <p class="project-attributes">Swift | 2021-2022</p>
+            <p>Music quiz game for iOS that utilizes the last.fm API to generate questions based around a user's streaming habits.</p>
+        </div>
+        <div>
+            <h4>Taylorizer</h4>
+            <p class="project-attributes">Python/React Web | 2022</p>
+            <p>Allows users to interact with a GPT-2 powered machine learning model trained to write Taylor Swift songs.</p>
+            <div class="links">
+                <a href="https://www.elijahsorensen.com/taylorizer/index.html">Try it</a>
+            </div>
+        </div>
+        <h3>University</h3>
+        <div>
+            <h4>Circuit Tracer</h4>
+            <p class="project-attributes">Java | 2021</p>
+            <p>Implementation of a search algorithm which parses a valid input .dat file representing a circuit board layout, generating a list of the best possible (shortest) trace paths that connect two circuit components on the board.</p>
+            <div class="links">
+                <a href="https://github.com/soreelij/circuit-tracer">GitHub</a>
+            </div>
+        </div>
+        <div>
+            <h4>Priority Queue CPU Scheduling Simulation</h4>
+            <p class="project-attributes">Java | 2021</p>
+            <p>Priority queue max heap for simulation of round-robin CPU Process scheduling. Randomly generates processes, adds them to the queue following the scheduling algorithm, and outputs simulation results.</p>
+            <div class="links">
+                <a href="https://github.com/soreelij/cpu-scheduling">GitHub</a>
+            </div>
+        </div>
+        <div>
+            <h4>Bioinformatics Using B-Trees</h4>
+            <p class="project-attributes">Java | 2021</p>
+            <p>Parses an input GeneBank file and stores its contents within a B-Tree. Accepts a DNA sequence query and searches the B-Tree, returning its frequency occurrence within the given genome. Outputs results to a machine-readable binary file or an SQL database.</p>
+            <div class="links">
+                <a href="https://github.com/soreelij/btree">GitHub</a>
+            </div>
+        </div>
+        <div>
+            <h4>myps</h4>
+            <p class="project-attributes">C | 2021</p>
+            <p>Simplified version of the ps command found on the Unix terminal. Displays current processes on the system and their respective information. Demonstrates the create/destroy design pattern, dynamic memory allocation, and file stream proecessing.</p>
+            <div class="links">
+                <a href="https://github.com/soreelij/myps/blob/main/README.md">GitHub</a>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 <footer style="text-align: center;">
-    <p>&copy; 2022 Elijah Sorensen</p>
+    <p>&copy; 2023 Elijah Sorensen</p>
     <div class="footernav">
         <li style><a href="https://github.com/soreelij">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/elijahmsorensen/">Linkedin</a></li>
