--- a/trevor.html
+++ b/trevor.html
@@ -9,26 +9,38 @@
 </head>
 
 <body>
-    <center>
+    <div class="content-center">
         <h2>Trevor's Corner</h2>
         <p>your online stop to shorten the wait.</p>
-        <p>june 11th, 2023—the birthday update</p>
-        <h1>Happy 21st Birthday, Trevor. 🥳</h1>
-        <p>
-            21 is a big one. So, here are 21 songs that remind me <i>of</i> you, <i>for</i> you. I love you, and I miss you. Enjoy, and make sure to listen in order.
-        </p>
-        <br/>
-        <div class="frame-wrapper">
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4c9ctL7ntaWvk6rxWlNjxz?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <div>
+            <strong>June 17th, 2023—the fun and games update</strong>
+            <br />
+            <br />
+            <div class="button-wrapper">
+                <button onclick="window.location.href='wordle.html';">Play Now</button>
+            </div>
         </div>
-        <br/>
-         <div class="button-wrapper">
-            <button class="confetti-button">Celebrate 🎉</button>
+        <br />
+
+        <div>
+            <strong>June 11th, 2023—the birthday update</strong>
+            <h1>Happy 21st Birthday, Trevor. 🥳</h1>
+            <p>
+                21 is a big one. So, here are 21 songs that remind me <i>of</i> you, <i>for</i> you. I love you, and I miss you. Enjoy, and make sure to listen in order.
+            </p>
+            <br/>
+            <div class="frame-wrapper">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4c9ctL7ntaWvk6rxWlNjxz?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <br/>
+             <div class="button-wrapper">
+                <button class="confetti-button">Celebrate 🎉</button>
+            </div>
+            <p style="font-size: 10px">(click me!) ⬆️</p>
         </div>
-        <p style="font-size: 10px">(click me!) ⬆️</p>
         <p>time until Eli buys Trevor fancy alcohol for his birthday:</p>
         <h1 style="align: center;" id="demo"></h1>
-    </center>
+    </div>
     
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script>
