Update about wording

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                                 well beyond just Taylor—I collect vinyl records and love curating music into countless
                                 playlists from a variety
                                 of artists and genres.
-                                Going to concerts is one of my most favorite things to do. Few things compare to seeing
-                                your favorite artist live.
+                                Going to concerts is one of my most favorite things to do. It's always unreal seeing one
+                                of your favorite artists live.
                                 <br />
                                 <br />
                                 I love spending time with my family, friends, and boyfriend. Ask any one of them, and
