--- a/index.html
+++ b/index.html
@@ -92,15 +92,10 @@
                         <div class="col-md-6 order-md-2">
                             <h4>Hi, I'm Elijah! 👋</h4>
                             <p>
-                                Born and raised in Idaho Falls, I'm a developer now living Boise, ID. I'm in my last
-                                semester studying Computer Science at
-                                Boise State University, with an emphasis in machine learning. Of everything I've
-                                learned, I'm
-                                most passionate about and fascinated by natural language processing. I've always loved
-                                to write,
-                                and it's amazing what we can do with a language, data science, and artificial
-                                intelligence.
-                                I'm also a member of the Boise State Honors College.
+                                Born and raised in Idaho Falls, I'm a developer now living Boise, ID. I recently graduated 
+                                from Boise State University with a
+                                degree in Computer Science, emphasizing in machine learning. I currently work as a Generative AI
+                                Software Engineer at Clearwater Analytics.
                                 <br />
                                 <br />
                                 Outside of my studies, I am an avid runner, reader, and Taylor Swift fan. My favorite
