--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <div class="container">
         <div class="row align-items-center" style="min-height: 100vh;">
             <div class="col-sm-4">
-                <img class="rounded-circle mx-auto d-block" src="images/elijah.jpg"
+                <img class="rounded-circle mx-auto d-block" src="images/elijah.JPEG"
                     style="width: 300px; height: 300px; margin-bottom: 10px;">
             </div>
             <div class="col-lg-8">
                 <h1 class="title">Elijah Sorensen</h1>
-                <h2 class="display-6 mb-4" style="font-weight: 900;">Developer in <span style="color: #3E7CB6;">Boise,
+                <h2 class="display-6 mb-4" style="font-weight: 900;">Software Engineer in <span style="color: #3E7CB6;">Boise,
                         ID</span></h2>
                 <a href="#projects">Learn more about my projects</a>
             </div>
